--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ rayon = "1.8.1"
 dashmap = { version = "5.5.3", features = ["rayon"] }
 serde = { version = "1.0.197", features = ["derive"] }
 chrono = { version = "0.4.34", features = ["serde"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
